the code works for scaling to any size, currently the start buttons do not work

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "src/index.js",
   "scripts": {
     "start": "budo . -d --serve bundle.js --live",
-    "build": "browserify src -o bundle.js -g",
+    "build": "browserify src -o bundle.js -g uglifyify",
     "test": "browserify test/index.js | node | tap-spec",
     "dist": "mkdir -p dist && bash -c 'cp *.{js,html,css} dist'",
     "push": "gh-pages -d dist",
